--- a/_posts/2015-01-02-abc.md
+++ b/_posts/2015-01-02-abc.md
@@ -1,7 +1,12 @@
 ---
 layout: post
+published: true
 title: "Hank Quinlan, Horrible Cop, Launches Site"
 date: 2014-04-30
+category: database
+tags: [database, oracle, fancy]
+comments: true
+url: /abc/
 ---
 
 Well. Finally got around to putting this old website together. Neat thing about it - powered by [Jekyll](http://jekyllrb.com) and I can use Markdown to author my posts. It actually is a lot easier than I thought it was going to be.
@@ -13,3 +18,11 @@ with open('abc', 'r') as fh:
 	delete fh
 ```
 The fucking machine is down
+
+<div>
+{% if page.comments %}
+	<hr/>
+	<h2>Comments</h2>
+	<div class="fb-comments" data-href="{{ site.url }} {{ page.url }}" data-num-posts="4" data-width="706"></div>
+{% endif %}
+</div>
