--- a/_posts/2015-01-02-abc.md
+++ b/_posts/2015-01-02-abc.md
@@ -1,28 +1,45 @@
 ---
 layout: post
 published: true
-title: "Hank Quinlan, Horrible Cop, Launches Site"
+title: "Building a Responsive Login Form with SASS and Compass in 5 steps"
+author: "loitd"
 date: 2014-04-30
 category: database
 tags: [database, oracle, fancy]
 comments: true
 url: /abc/
+ads2: '<blockquote>
+        <p><a href="#">Overall, install something days by days a lesser intake (of calories) over the whole day.</a></p>
+        <small>By: Krista Casazza, PhD, RD.</small>
+      </blockquote>'
 ---
-
+## Introduction
 Well. Finally got around to putting this old website together. Neat thing about it - powered by [Jekyll](http://jekyllrb.com) and I can use Markdown to author my posts. It actually is a lot easier than I thought it was going to be.
 
-```
-The code is here
-import abc.py
-with open('abc', 'r') as fh:
-	delete fh
-```
-The fucking machine is down
+{{ site.ads1 }}
 
-<div>
-{% if page.comments %}
-	<hr/>
-	<h2>Comments</h2>
-	<div class="fb-comments" data-href="{{ site.url }} {{ page.url }}" data-num-posts="4" data-width="706"></div>
-{% endif %}
-</div>
+## Installing Tassis
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum:
+
+	sudo apt-get update
+	sudo apt-get install ruby-full rubygems	
+
+{{ page.ads2 }}
+
+## Using Tassis
+Perhaps unsurprisingly, our community wanted to know how. How do these writers write? What time of day do they write, and how frequently? How long does it take? And does it get any easier over time?
+
+{{ site.ads3 }}
+
+## Conclusion
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
