--- a/_posts/2016-01-01-index.md
+++ b/_posts/2016-01-01-index.md
@@ -1,1 +1,10 @@
+---
+layout: default
+published: true
+title: "Config9"
+date: 2016-07-29
+tags: [database, oracle, fancy]
+comments: true
+url: /
+---
 # this is fucking index
